Fixes TealAppDriver & implement regression tests (#1559)
# Pull Request

Fixes #1535 

### Changes description

- [x] Remove `testthat::skip("chromium")` from e2e tests
- [x] Ensure all e2e pass
- [x] Check that "is.null()" tests are not looking for removed HTML
elements from UI/UX refactor
- [x] Add regression tests:
  - [x] Sidebar visibility
  - [x] Modal popping (already covered in existing tests)
  - [x] Position of filter icons once collapsed

---------

--- a/inst/css/sidebar.css
+++ b/inst/css/sidebar.css
@@ -64,13 +64,13 @@ a.disabled {
   --bs-accordion-active-bg: rgba(var(--bs-secondary-rgb), 0.3);
 }
 
-.teal-transform-accordian .accordion-button {
+.teal-transform-accordion .accordion-button {
   --bs-accordion-btn-padding-y: 0.5rem;
   --bs-accordion-btn-padding-x: 0.5rem;
 }
 
-.teal-transform-accordian .accordion-button:not(.collapsed)::after,
-.teal-transform-accordian .accordion-button::after {
+.teal-transform-accordion .accordion-button:not(.collapsed)::after,
+.teal-transform-accordion .accordion-button::after {
   display: none;
 }
 
